y.output
   0  $accept : statements $end

   1  statements : statement
   2             | statement statements

   3  statement : label
   4            | expression
   5            | NEWLINE

   6  label : WORD COLON
   7        | MAIN

   8  expression : MOV REGISTER COMMA argument
   9             | LDR REGISTER COMMA argument
  10             | ADD REGISTER COMMA argument COMMA argument
  11             | SUB REGISTER COMMA argument COMMA argument
  12             | BRANCH WORD
  13             | CMP REGISTER COMMA argument
  14             | BGT WORD
  15             | BLT WORD
  16             | PRINT REGISTER

  17  argument : REGISTER
  18           | HASH NUMBER

state 0
	$accept : . statements $end  (0)

	WORD  shift 1
	NEWLINE  shift 2
	MAIN  shift 3
	MOV  shift 4
	CMP  shift 5
	LDR  shift 6
	ADD  shift 7
	SUB  shift 8
	BRANCH  shift 9
	BLT  shift 10
	BGT  shift 11
	PRINT  shift 12
	.  error

	statements  goto 13
	statement  goto 14
	label  goto 15
	expression  goto 16


state 1
	label : WORD . COLON  (6)

	COLON  shift 17
	.  error


state 2
	statement : NEWLINE .  (5)

	.  reduce 5


state 3
	label : MAIN .  (7)

	.  reduce 7


state 4
	expression : MOV . REGISTER COMMA argument  (8)

	REGISTER  shift 18
	.  error


state 5
	expression : CMP . REGISTER COMMA argument  (13)

	REGISTER  shift 19
	.  error


state 6
	expression : LDR . REGISTER COMMA argument  (9)

	REGISTER  shift 20
	.  error


state 7
	expression : ADD . REGISTER COMMA argument COMMA argument  (10)

	REGISTER  shift 21
	.  error


state 8
	expression : SUB . REGISTER COMMA argument COMMA argument  (11)

	REGISTER  shift 22
	.  error


state 9
	expression : BRANCH . WORD  (12)

	WORD  shift 23
	.  error


state 10
	expression : BLT . WORD  (15)

	WORD  shift 24
	.  error


state 11
	expression : BGT . WORD  (14)

	WORD  shift 25
	.  error


state 12
	expression : PRINT . REGISTER  (16)

	REGISTER  shift 26
	.  error


state 13
	$accept : statements . $end  (0)

	$end  accept


state 14
	statements : statement .  (1)
	statements : statement . statements  (2)

	WORD  shift 1
	NEWLINE  shift 2
	MAIN  shift 3
	MOV  shift 4
	CMP  shift 5
	LDR  shift 6
	ADD  shift 7
	SUB  shift 8
	BRANCH  shift 9
	BLT  shift 10
	BGT  shift 11
	PRINT  shift 12
	$end  reduce 1

	statements  goto 27
	statement  goto 14
	label  goto 15
	expression  goto 16


state 15
	statement : label .  (3)

	.  reduce 3


state 16
	statement : expression .  (4)

	.  reduce 4


state 17
	label : WORD COLON .  (6)

	.  reduce 6


state 18
	expression : MOV REGISTER . COMMA argument  (8)

	COMMA  shift 28
	.  error


state 19
	expression : CMP REGISTER . COMMA argument  (13)

	COMMA  shift 29
	.  error


state 20
	expression : LDR REGISTER . COMMA argument  (9)

	COMMA  shift 30
	.  error


state 21
	expression : ADD REGISTER . COMMA argument COMMA argument  (10)

	COMMA  shift 31
	.  error


state 22
	expression : SUB REGISTER . COMMA argument COMMA argument  (11)

	COMMA  shift 32
	.  error


state 23
	expression : BRANCH WORD .  (12)

	.  reduce 12


state 24
	expression : BLT WORD .  (15)

	.  reduce 15


state 25
	expression : BGT WORD .  (14)

	.  reduce 14


state 26
	expression : PRINT REGISTER .  (16)

	.  reduce 16


state 27
	statements : statement statements .  (2)

	.  reduce 2


state 28
	expression : MOV REGISTER COMMA . argument  (8)

	REGISTER  shift 33
	HASH  shift 34
	.  error

	argument  goto 35


state 29
	expression : CMP REGISTER COMMA . argument  (13)

	REGISTER  shift 33
	HASH  shift 34
	.  error

	argument  goto 36


state 30
	expression : LDR REGISTER COMMA . argument  (9)

	REGISTER  shift 33
	HASH  shift 34
	.  error

	argument  goto 37


state 31
	expression : ADD REGISTER COMMA . argument COMMA argument  (10)

	REGISTER  shift 33
	HASH  shift 34
	.  error

	argument  goto 38


state 32
	expression : SUB REGISTER COMMA . argument COMMA argument  (11)

	REGISTER  shift 33
	HASH  shift 34
	.  error

	argument  goto 39


state 33
	argument : REGISTER .  (17)

	.  reduce 17


state 34
	argument : HASH . NUMBER  (18)

	NUMBER  shift 40
	.  error


state 35
	expression : MOV REGISTER COMMA argument .  (8)

	.  reduce 8


state 36
	expression : CMP REGISTER COMMA argument .  (13)

	.  reduce 13


state 37
	expression : LDR REGISTER COMMA argument .  (9)

	.  reduce 9


state 38
	expression : ADD REGISTER COMMA argument . COMMA argument  (10)

	COMMA  shift 41
	.  error


state 39
	expression : SUB REGISTER COMMA argument . COMMA argument  (11)

	COMMA  shift 42
	.  error


state 40
	argument : HASH NUMBER .  (18)

	.  reduce 18


state 41
	expression : ADD REGISTER COMMA argument COMMA . argument  (10)

	REGISTER  shift 33
	HASH  shift 34
	.  error

	argument  goto 43


state 42
	expression : SUB REGISTER COMMA argument COMMA . argument  (11)

	REGISTER  shift 33
	HASH  shift 34
	.  error

	argument  goto 44


state 43
	expression : ADD REGISTER COMMA argument COMMA argument .  (10)

	.  reduce 10


state 44
	expression : SUB REGISTER COMMA argument COMMA argument .  (11)

	.  reduce 11


19 terminals, 6 nonterminals
19 grammar rules, 45 states
